--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -22,7 +22,8 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.11.0" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.1.0" />
     <PackageReference Include="MSTest.TestFramework" Version="2.1.0" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.3" /> <!-- CVE-2021-24112 -->
+    <PackageReference Include="System.Drawing.Common" Version="5.0.3" />
+    <PackageReference Include="System.Security.Cryptography.Pkcs" Version="6.0.3" /> <!-- CVE-2023-29331 -->
     <PackageReference Include="System.Security.Cryptography.Xml" Version="6.0.1" /> <!-- CVE-2022-34716 -->
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" /> <!-- CVE-2022-41064 -->
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.0.9" />
