--- a/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
+++ b/src/PowerFx.Dataverse.Tests/PowerFx.Dataverse.Tests.csproj
@@ -29,6 +29,7 @@
     <PackageReference Include="System.Drawing.Common" Version="5.0.3" /> <!-- CVE-2023-29331 --> <!-- CVE-2022-34716 -->
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" /> <!-- CVE-2024-0056 -->
     <PackageReference Include="Microsoft.PowerPlatform.Dataverse.Client" Version="1.0.9" />
+    <PackageReference Include="System.Formats.Asn1" Version="8.0.1" /> <!-- CVE-2024-38095 -->
     <PackageReference Include="Microsoft.Rest.ClientRuntime" Version="2.3.24" /> <!-- CVE-2022-26907 -->
     <PackageReference Include="System.Runtime" Version="4.3.0" />
     <PackageReference Include="Microsoft.PowerFx.Core" Version="$(PowerFxVersion)" />
